Ajustes em algumas tags, codigo mais limpo

--- a/index.html
+++ b/index.html
@@ -34,15 +34,14 @@
         </div>
 
         <div class="list">
-            
             <div class="item active">
                 <div class="product-img">
-                    <img src="./img/apple-watch.png" alt="Apple Watch">
+                    <img src="./img/apple-watch.png" alt="Apple Watch Series 10 - smartwatch da Apple">
                 </div>
                 <div class="content">
                     <p class="product-tag">Novo Lançamento</p>
                     <p class="product-name">Apple Watch Series 10</p>
-                    <p class="description"> O Apple Watch Series 10 é o smartwatch mais fino e avançado da Apple até o
+                    <p class="description">O Apple Watch Series 10 é o smartwatch mais fino e avançado da Apple até o
                         momento, combinando tecnologia, estilo e saúde num só dispositivo. Sua tela OLED de amplo ângulo
                         é a maior já vista em um Apple Watch — cerca de 30 % maior que nos modelos Series 4–6, e até 9 %
                         maior que os Series 7 – 9 — além de ser até 40 % mais brilhante quando vista de lado</p>
@@ -50,32 +49,9 @@
                 </div>
             </div>
 
-
-            <div class="list">
-            </div>
-
-            <div class="arrows">
-                <button class="arrow-btn" id="prev">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#fff"
-                        class="bi bi-arrow-left" viewBox="0 0 16 16">
-                        <path fill-rule="evenodd"
-                            d="M15 8a.5.5 0 0 0-.5-.5H2.707l3.147-3.146a.5.5 0 1 0-.708-.708l-4 4a.5.5 0 0 0 0 .708l4 4a.5.5 0 0 0 .708-.708L2.707 8.5H14.5A.5.5 0 0 0 15 8" />
-                    </svg>
-                    </svg>
-                </button>
-                <button class="arrow-btn" id="next">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#fff"
-                        class="bi bi-arrow-right" viewBox="0 0 16 16">
-                        <path fill-rule="evenodd"
-                            d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8" />
-                    </svg>
-                    </svg>
-                </button>
-            </div>
-
             <div class="item">
                 <div class="product-img">
-                    <img src="./img/air-pods.png" alt="Air pods Max">
+                    <img src="./img/air-pods.png" alt="AirPods Max - fones de ouvido premium">
                 </div>
                 <div class="content">
                     <p class="product-tag">Som Premium</p>
@@ -89,7 +65,7 @@
 
             <div class="item">
                 <div class="product-img">
-                    <img src="./img/vision-pro.png" alt="Vison Pro">
+                    <img src="./img/vision-pro.png" alt="Apple Vision Pro - óculos de realidade mista">
                 </div>
                 <div class="content">
                     <p class="product-tag">Alta Performance</p>
@@ -100,14 +76,35 @@
                     <button class="btn">Saiba mais</button>
                 </div>
             </div>
-            
-             <div class="indicators">
-                <div class="numbers">01</div>
-                <div class="dots">
-                    <div class="dot active"></div>
-                    <div class="dot"></div>
-                    <div class="dot"></div>
-                </div>
+        </div>
+
+        <div class="arrows">
+            <button class="arrow-btn" id="prev">
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#fff" class="bi bi-arrow-left"
+                    viewBox="0 0 16 16">
+                    <path fill-rule="evenodd" d="M15 8a.5.5 0 0 0-.5-.5H2.707l3.147-3.146a.5.5 0 1 0-.708-.708l-4 
+                       4a.5.5 0 0 0 0 .708l4 4a.5.5 0 0 0 .708-.708L2.707 
+                       8.5H14.5A.5.5 0 0 0 15 8" />
+                </svg>
+            </button>
+
+            <button class="arrow-btn" id="next">
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#fff" class="bi bi-arrow-right"
+                    viewBox="0 0 16 16">
+                    <path fill-rule="evenodd" d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 
+                       0 0 1 .708-.708l4 4a.5.5 0 0 1 
+                       0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 
+                       8.5H1.5A.5.5 0 0 1 1 8" />
+                </svg>
+            </button>
+        </div>
+
+        <div class="indicators">
+            <div class="numbers">01</div>
+            <div class="dots">
+                <div class="dot active"></div>
+                <div class="dot"></div>
+                <div class="dot"></div>
             </div>
         </div>
     </main>
